[gd_scene load_steps=5 format=3 uid="uid://cookingscene_advanced"]

[ext_resource type="Script" path="res://Cooking/CookingScene.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://iconplaceholder" path="res://icon.png" id="2_icon"]
[ext_resource type="Script" path="res://Cooking/Pot.gd" id="3_pot_script"]
[ext_resource type="PackedScene" uid="uid://ingredient_item" path="res://Cooking/Ingredient.tscn" id="4_ingredient"]
[ext_resource type="Texture2D" uid="uid://factory_bg_cook" path="res://Factory/Assets/background_for_the_minigame_cooking_jar_no_icon_2.png" id="5_bg"]
[ext_resource type="Texture2D" uid="uid://boiler_top" path="res://Factory/Assets/boiler_top.png" id="6_boiler_top"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_timer_red"]
bg_color = Color(0.9, 0.1, 0.1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stir_normal"]
bg_color = Color(0.25, 0.55, 0.25, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.15, 0.35, 0.15, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stir_hover"]
bg_color = Color(0.35, 0.65, 0.35, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.2, 0.45, 0.2, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stir_pressed"]
bg_color = Color(0.15, 0.4, 0.15, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.1, 0.25, 0.1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slider_bg"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slider_fill"]
bg_color = Color(1, 0.3, 0.0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ImageTexture" id="ImageTexture_invisible_grabber"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_green_zone"]
bg_color = Color(0.2, 1.0, 0.4, 0.2)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 1.0, 0.4, 0.8)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.2, 1.0, 0.4, 0.4)
shadow_size = 8


[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bulb"]
bg_color = Color(1.0, 0.25, 0.0, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1.0, 0.8, 0.0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(1.0, 0.4, 0.0, 0.8)
shadow_size = 20

[node name="CookingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_bg")
expand_mode = 1
stretch_mode = 6

[node name="GameArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pot" type="TextureRect" parent="GameArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.5
offset_top = -29.0
offset_right = 232.5
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_boiler_top")
expand_mode = 1
script = ExtResource("3_pot_script")




[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2


[node name="HeatSlider" type="VSlider" parent="UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -250.0
offset_right = -40.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2
theme_override_icons/grabber = SubResource("ImageTexture_invisible_grabber")
theme_override_icons/grabber_highlight = SubResource("ImageTexture_invisible_grabber")
theme_override_icons/grabber_disabled = SubResource("ImageTexture_invisible_grabber")
theme_override_styles/slider = SubResource("StyleBoxFlat_slider_bg")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_slider_fill")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_slider_fill")
max_value = 100.0
value = 50.0
editable = false
scrollable = false

[node name="GreenZone" type="Panel" parent="UI/HeatSlider"]
show_behind_parent = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_green_zone")

theme_override_styles/panel = SubResource("StyleBoxFlat_green_zone")

theme_override_styles/panel = SubResource("StyleBoxFlat_green_zone")

[node name="DangerIndicator" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.2)
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 90.0
grow_horizontal = 2
max_value = 100.0

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 110.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Статус..."
horizontal_alignment = 1

[node name="MoneyPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 70.0

[node name="HBox" type="HBoxContainer" parent="UI/MoneyPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoneyPanel/HBox"]
layout_mode = 2
text = "Деньги:"

[node name="MoneyValue" type="Label" parent="UI/MoneyPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="IngredientRequestLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 160.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Добавьте: ..."
horizontal_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="UI/IngredientRequestLabel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = 5.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_timer_red")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="StirButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -150.0
offset_right = 120.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_stir_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_stir_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_stir_pressed")
text = "МЕШАТЬ!"

[node name="IngredientsShelf" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 550.0
offset_top = -300.0
offset_right = 750.0
offset_bottom = 300.0
grow_vertical = 2

[node name="Ing_Fire" parent="UI/IngredientsShelf" instance=ExtResource("4_ingredient")]
layout_mode = 1
offset_left = 100.0
offset_top = 0.0
offset_right = 100.0
offset_bottom = 0.0
scale = Vector2(2.0, 2.0)
ingredient_name = "Огненный корень"

[node name="Label" type="Label" parent="UI/IngredientsShelf/Ing_Fire"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Огонь"
horizontal_alignment = 1

[node name="Ing_Ice" parent="UI/IngredientsShelf" instance=ExtResource("4_ingredient")]
layout_mode = 1
offset_left = 0.0
offset_top = 180.0
offset_right = 0.0
offset_bottom = 180.0
scale = Vector2(2.0, 2.0)
ingredient_name = "Ледяная пыль"

[node name="Label" type="Label" parent="UI/IngredientsShelf/Ing_Ice"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Лед"
horizontal_alignment = 1

[node name="Ing_Salt" parent="UI/IngredientsShelf" instance=ExtResource("4_ingredient")]
layout_mode = 1
offset_left = 0.0
offset_top = 360.0
offset_right = 0.0
offset_bottom = 360.0
scale = Vector2(2.0, 2.0)
ingredient_name = "Соль"

[node name="Label" type="Label" parent="UI/IngredientsShelf/Ing_Salt"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Соль"
horizontal_alignment = 1

[node name="Ing_Sugar" parent="UI/IngredientsShelf" instance=ExtResource("4_ingredient")]
layout_mode = 1
offset_left = 100.0
offset_top = 540.0
offset_right = 100.0
offset_bottom = 540.0
scale = Vector2(2.0, 2.0)
ingredient_name = "Сахар"

[node name="Label" type="Label" parent="UI/IngredientsShelf/Ing_Sugar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Сахар"
horizontal_alignment = 1

[connection signal="button_down" from="UI/StirButton" to="." method="_on_stir_button_down"]
[connection signal="button_up" from="UI/StirButton" to="." method="_on_stir_button_up"]
